--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,8 +24,8 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
+  curved_navigation_bar: ^1.0.1
   google_fonts: ^2.1.0
-  slidable_bar: ^1.1.0
   splash_screen_view: ^3.0.0
 
 dev_dependencies:
@@ -67,33 +67,26 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
-
 splash_screen_view:
   # Use color to set the background of your splash screen to a solid color.
   # Use background_image to set the background of your splash screen to a png image.
   # This is useful for gradients. The image will be stretch to the  size of the app.
   # Only one parameter can be used, color and background_image cannot both be set.
-
   color: "#ffffff"
   #background_image: "assets/splashscreen_image.png"
-
   # Optional parameters are listed below.
   image: assets/images/lf_logo_256.png
 
   color_dark: "#ffffff"
   #background_image_dark: "assets/dark-background.png"
   image_dark: assets/images/lf_logo_256.png
-
   #android: false
   #ios: false
   #web: false
-
   #android_gravity: center
   #ios_content_mode: center
   #web_image_mode: center
-
   #fullscreen: true
-
   #info_plist_files:
   #  - 'ios/Runner/Info-Debug.plist'
   #  - 'ios/Runner/Info-Release.plist'
