--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   curved_navigation_bar: ^1.0.1
+  dio: ^4.0.0
   google_fonts: ^2.1.0
   splash_screen_view: ^3.0.0
 
