--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,8 +26,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   curved_navigation_bar: ^1.0.1
   dio: ^4.0.0
+  fl_chart: ^0.36.3
   google_fonts: ^2.1.0
   splash_screen_view: ^3.0.0
+  timelines: ^0.1.0
 
 dev_dependencies:
   flutter_test:
